# bxi_hw

./: .gitignore  MUJOCO_LOG.TXT  README.md  build.sh
bxi_hw_release/: local_setup.sh  setup.sh
bxi_hw_release/lib/hardware/: hardware
bxi_hw_release/lib/keyboard_controller/: keyboard_controller
bxi_hw_release/lib/mujoco/: simulation
bxi_hw_release/lib/remote_controller/: remote_controller
bxi_hw_release/lib/robot_controller/: robot_controller
bxi_hw_release/share/blasfeo_ament/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bxi_hw_release/share/communication/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bxi_hw_release/share/core/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
bxi_hw_release/share/description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bxi_hw_release/share/hardware/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bxi_hw_release/share/hpipm_ament/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bxi_hw_release/share/keyboard_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bxi_hw_release/share/motion/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bxi_hw_release/share/mujoco/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bxi_hw_release/share/pinocchio_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  (+2 more)
bxi_hw_release/share/robot_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
bxi_hw_release/share/robot_controller/cmake/: robot_controllerConfig.cmake
bxi_hw_release/share/robot_controller/config/: bot_elf_gait.info  bot_elf_model.info  bot_elf_model_hw.info  bot_elf_task.info
bxi_hw_release/share/robot_controller/launch/: manager_bot_elf.launch.py  manager_bot_elf_hw.launch.py
script/: bxi-dev.rules
src/bxi_example/: CMakeLists.txt  package.xml
src/bxi_example/include/control/: RobotController.h
src/bxi_example/launch/: example_launch.py  example_launch_hw.py
src/bxi_example/src/: main.cpp
src/bxi_example/src/control/: RobotController.cpp
src/bxi_example_py/: package.xml  setup.cfg  setup.py
src/example/: CMakeLists.txt  package.xml
src/example/include/control/: RobotController.h
src/example/src/control/: RobotController.cpp
(+277 files in other folders)
